# obs_automation

./: .gitignore  README.md  TOURGUIDE.md  conftest.py  pyproject.toml  settings.py
features/: weather_forecast.feature
page/: __init__.py  background_location_access_page.py  base_screen.py  device_location_access_page.py  disclaimer_page.py  home_page.py  nine_days_forecast_page.py  privacy_policy_statements_page.py  traffic_info_tutorial_page.py  whats_new_page.py
pages/: __init__.py  background_location_access_page.py  base_screen.py  device_location_access_page.py  disclaimer_page.py  home_page.py  nine_days_forecast_page.py  privacy_policy_statements_page.py  traffic_info_tutorial_page.py  whats_new_page.py
steps/: __init__.py  nine_days_forecast.py
test/: test_weather_forecast.py
yml/: config.yml
